base/wordpress-whole-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-dev
  labels:
    app: wordpress
spec:
  ports:
    - port: 8080
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-dev
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: quay.io/rh_ee_castaffo/wordpress:v2.0-amd64
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  namespace: wordpress-dev
  labels:
    app: wordpress
spec:
  host: wordpress-dev.apps.cluster-m795l.dynamic.redhatworkshops.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: wordpress
